# new-haystack-pipeline-draft

./: 0000-drop_basecomponent.md  0000-pipeline.md  README.md  example.py  pyproject.toml
examples/: complex_pipeline.py  example.py  pipeline_serialization.py  pipeline_with_trivial_nodes.py  simple_pipeline.py
haystack-module-example/: .gitignore  pyproject.toml
haystack-module-example/haystack_module_example/: my_action.py
haystack-module-example/tests/: conftest.py
haystack-module-example/tests/integration/: test_action,py  test_action.py
haystack-module-example/tests/unit/: test_action,py  test_action.py
haystack/actions/: __init__.py  _utils.py  action.py  demo_actions.py
haystack/actions/store/: store.py
haystack/data/: __init__.py  document.py
haystack/document_stores/: __init__.py  _utils.py  memory.py
haystack/evaluation/: evaluation.py
haystack/haystack/actions/: __init__.py  action.py
haystack/haystack/data/: __init__.py  document.py
haystack/haystack/models/: device_management.py
haystack/haystack/pipeline/: _utils.py  pipeline.py
haystack/haystack/stores/: __init__.py  _utils.py
haystack/models/: device_management.py
haystack/pipeline/: __init__.py  _utils.py  pipeline.py
haystack/stores/: __init__.py  _utils.py
haystack/stores/memory/: _bm25.py  _embedding_retrieval.py  document_store.py  store.py
haystack/tests/: conftest.py
haystack/tests/unit/: test_pipeline.py
new-haystack/: pyproject.toml
new-haystack/new_haystack/: node.py
new-haystack/new_haystack/actions/: __init__.py  _utils.py  action.py
new-haystack/new_haystack/data/: __init__.py  answer.py  data.py  document.py  query.py  span.py
new-haystack/new_haystack/models/: device_management.py
new-haystack/new_haystack/nodes/: __init__.py  _utils.py  node.py
new-haystack/new_haystack/pipeline/: __init__.py  _utils.py  pipeline.py
new-haystack/new_haystack/stores/: __init__.py  _utils.py
new-haystack/tests/: conftest.py  test_complex_pipeline.py  test_many2many_pipeline.py  test_simple_looping.py  test_simple_pipeline.py  test_simple_pruning.py
new-haystack/tests/unit/: test_pipeline.py
proposal/: 0000-drop_basecomponent.md  0000-stores-and-data.md
tests/: conftest.py  test_haystack_actions.py
tests/unit/: test_pipeline.py
(+63 files in other folders)
